update pre-class for april 22

--- a/snippets/favoriteFoods.html
+++ b/snippets/favoriteFoods.html
@@ -35,7 +35,7 @@
 
   <script>
     let favoriteFoods = document.forms.favoriteFoods;
-		// favoriteFoods.elements.name = 'Zach';
+		// favoriteFoods.elements.name = 'user';
 		// check two of the boxes before submitting the form.  
 		// notice the checkboxes are selected by ID instead of name in this case
 		// favoriteFoods.elements.katsucurry.checked = true;
